--- a/index.html
+++ b/index.html
@@ -167,7 +167,17 @@
         <h2 class="team-section__title">Наша команда</h2>
         <ul class="team-section__list">
           <li class="list-item">
-            <img src="./images/studiopage/4.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+            <img 
+            srcset=
+            "./images\studiopage\Team\Team-mobile\1-Igor-450w-1.jpg 450w, 
+            ./images\studiopage\Team\Team-mobile\1-Igor-900w-1.jpg 900w , 
+            ./images\studiopage\Team\Team-tablet\1-Igor-350w-1.jpg 350w, 
+            ./images\studiopage\Team\Team-tablet\1-Igor-708-w-1@2x.jpg 708w,
+            ./images\studiopage\Team\destop\1-Igor-270w.jpg 270w,
+            ./images\studiopage\Team\destop\1-Igor-540w2x.jpg 540w" 
+            src="./images/studiopage/4.jpg" alt="Игорь Демьяненко" width="450" height="460"
+            sizes="(min-width: 1200px) 270px,(min-width: 768px) 354px,100vw"
+             />
             <div class="team-section__wrapper">
               <h3 class="team-section__workername">Игорь Демьяненко</h3>
               <p class="team-section__position" lang="en">Product Designer</p>
@@ -205,7 +215,14 @@
             </div>
           </li>
           <li class="list-item">
-            <img src="./images/studiopage/5.jpg" alt="Ольга Репина" width="270" height="260" />
+            <img
+            srcset="./images\studiopage\Team\destop\2-Olga-270w.jpg 270w, 
+            ./images\studiopage\Team\destop\2-Olga-540@2x w540.jpg 540w,
+            ./images\studiopage\Team\Team-mobile\2-Olga-450w@2x-2 w450.jpg 2x 450w, 
+            ./images\studiopage\Team\Team-mobile\2-Olga-950w-2.jpg 900w,
+            ./images\studiopage\Team\Team-tablet\2-Olga-350w.jpg 350w,
+            ./images\studiopage\Team\Team-tablet\2-Olga-708w.jpg 708w" src="./images/studiopage/5.jpg" alt="Ольга Репина" width="450"   height="460" 
+            sizes="(min-width: 1200px) 270px,(min-width: 768px) 354px,100vw"/>
             <div class="team-section__wrapper">
               <h3 class="team-section__workername">Ольга Репина</h3>
               <p class="team-section__position" lang="en">
@@ -244,7 +261,15 @@
             </div>
           </li>
           <li class="list-item">
-            <img src="./images/studiopage/6.jpg" alt="Николай Тарасов" width="270" height="260" />
+            <img srcset="./images\studiopage\Team\destop\3-Nik-270w.jpg 270w, 
+            ./images\studiopage\Team\destop\3-Nik540w@2x.jpg  540w,
+            ./images\studiopage\Team\Team-mobile\3-Nik-450w-3.jpg 450w,
+            ./images\studiopage\Team\Team-mobile\3-Nik-900@2x-3.jpg 2x, 900w,
+            ./images\studiopage\Team\Team-tablet\3-Nik-350w-1.jpg 350w,
+            ./images\studiopage\Team\Team-tablet\3-Nik-708w2x.jpg 708w,"
+            sizes="(min-width: 1200px) 270px,(min-width: 768px) 354px,100vw" 
+            src="./images/studiopage/6.jpg" 
+            alt="Николай Тарасов" width="450" height="460" />
             <div class="team-section__wrapper">
               <h3 class="team-section__workername">Николай Тарасов</h3>
               <p class="team-section__position" lang="en">Marketing</p>
@@ -282,7 +307,14 @@
             </div>
           </li>
           <li class="list-item">
-            <img src="./images/studiopage/7.jpg" alt="Михаил Ермаков" width="270" height="260" />
+            <img   srcset="./images\studiopage\Team\destop\4-Mihail-270w.jpg 270w,
+            ./images\studiopage\Team\destop\4-Mihail 540w 2x.jpg 540w,
+            ./images\studiopage\Team\Team-mobile\4-Mihail-450w-4.jpg 450w,
+            ./images\studiopage\Team\Team-mobile\4-Mihail-900@2x.jpg 900w,
+            ./images\studiopage\Team\Team-tablet\4-Mihail-354w.jpg 354w,
+            ./images\studiopage\Team\Team-tablet\4-Mihail-708w-2x.jpg 708w "
+            sizes="(min-width: 1200px) 270px,(min-width: 768px) 354px,100vw" 
+            src="./images/studiopage/7.jpg" alt="Михаил Ермаков" width="450" height="460" />
             <div class="team-section__wrapper">
               <h3 class="team-section__workername">Михаил Ермаков</h3>
               <p class="team-section__position" lang="en">UI Designer</p>
