--- a/portfolio.html
+++ b/portfolio.html
@@ -127,6 +127,13 @@
                 </p>
               </div>
               <img
+              srcset="./images\portfolio\projeckt\Destop\Techocrack-370w.jpg 370w,
+              ./images\portfolio\projeckt\Destop\Techocrack-740w.jpg 740w,
+              ./images\portfolio\projeckt\Project-tablet\1-tehnocrack-354w.jpg 354w,
+              ./images\portfolio\projeckt\Project-tablet\1-tehnocrack-708w.jpg 708w,
+              ./images\portfolio\projeckt\Project-mobile\1-tehnocrack-450w.jpg 450w,
+              ./images\portfolio\projeckt\Project-mobile\1-tehnocrack-900w.jpg 900w"
+              sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgTechnocrack.jpg"
                 alt="Технокряк"
                 width="370"
@@ -142,6 +149,13 @@
             <li class="list-item project-section__image-shadow ">
               <div class="project-section__portfolio-item"> 
               <img
+              srcset="./images\portfolio\projeckt\Destop\Golden-star-370w.jpg 370w,
+              ./images\portfolio\projeckt\Destop\Golden-star-740w.jpg 740w,
+              ./images\portfolio\projeckt\Project-mobile\2-New-Orlean-450w.jpg 450w,
+              ./images\portfolio\projeckt\Project-mobile\2-New-Orlean-900w.jpg 900w,
+              ./images\portfolio\projeckt\Project-tablet\2-Golden-poster-354w.jpg 354w,
+              ./images\portfolio\projeckt\Project-tablet\2-Golden-poster-708w.jpg 708w"
+              sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgGoldenStar.jpg"
                 alt="Постер New Orlean vs Golden Star"
                 width="370"
@@ -155,7 +169,13 @@
             </li>
             <li class="list-item project-section__image-shadow project-section__portfolio-item">
               <div class="project-section__portfolio-item">
-              <img
+              <img srcset="./images\portfolio\projeckt\Destop\Seafood-370w.jpg 370w,
+              ./images\portfolio\projeckt\Destop\Seafood-740w.jpg 740w,
+              ./images\portfolio\projeckt\Project-mobile\3-Seafood-450w.jpg 450w,
+              ./images\portfolio\projeckt\Project-mobile\3-Seafood-900w.jpg 900w,
+              ./images\portfolio\projeckt\Project-tablet\3-Seafood-354w.jpg 354w,
+              ./images\portfolio\projeckt\Project-tablet\3-Seafood-708w.jpg 708w"
+              sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgSeafood.jpg"
                 alt="Ресторан Seafood"
                 width="370"
@@ -170,6 +190,13 @@
             <li class="list-item project-section__image-shadow ">
               <div class="project-section__portfolio-item">
               <img
+              srcset="./images\portfolio\projeckt\Destop\Prime-370w.jpg 370w,
+              ./images\portfolio\projeckt\Destop\Prime-740w.jpg 740w
+              ./images\portfolio\projeckt\Project-mobile\4-Prime-450w.jpg 450w,
+              ./images\portfolio\projeckt\Project-mobile\4-Prime-900w.jpg 900w,
+              ./images\portfolio\projeckt\Project-tablet\4-Prime-354w.jpg 354w,
+              ./images\portfolio\projeckt\Project-tablet\4-Prime-708w.jpg 708w"
+              sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgPrime.jpg"
                 alt="Проект Prime"
                 width="370"
@@ -184,6 +211,13 @@
             <li class="list-item project-section__image-shadow project-section__portfolio-item">
               <div class="project-section__portfolio-item">
               <img
+              srcset="./images\portfolio\projeckt\Destop\Boxes-370w.jpg 370w,
+              ./images\portfolio\projeckt\Destop\Boxes-740w.jpg 740w,
+              ./images\portfolio\projeckt\Project-mobile\5-Boxes-900w.jpg 900w,
+              ./images\portfolio\projeckt\Project-mobile\5-Boxes450-w.jpg 450w,
+              ./images\portfolio\projeckt\Project-tablet\5-Boxes-708w.jpg 708w,
+              ./images\portfolio\projeckt\Project-tablet\5-Boxes-354w.jpg 354w"
+              sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgBoxes.jpg"
                 alt="Проект Boxes"
                 width="370"
@@ -198,6 +232,13 @@
             <li class="list-item project-section__image-shadow project-section__portfolio-item">
               <div class="project-section__portfolio-item">
               <img
+              srcset="./images\portfolio\projeckt\Destop\Inspiration-370w.jpg 370w,
+              ./images\portfolio\projeckt\Destop\Inspiration-740w.jpg 740w,
+              ./images\portfolio\projeckt\Project-mobile\6-inspiraton-450w.jpg 450w,
+              ./images\portfolio\projeckt\Project-mobile\6-inspiraton-900w.jpg 900w,
+              ./images\portfolio\projeckt\Project-tablet\6-Inspiration-354w.jpg 354w,
+              ./images\portfolio\projeckt\Project-tablet\6-Inspiration-708w.jpg 708w" 
+              sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgNoBorders.jpg"
                 alt="Inspiration has no Border"
                 width="370"
@@ -212,6 +253,13 @@
             <li class="list-item project-section__image-shadow ">
               <div class="project-section__portfolio-item">
               <img
+              srcset="./images\portfolio\projeckt\Destop\Legendary-370w.jpg 370w
+              ./images\portfolio\projeckt\Destop\Legendary-740w.jpg 740w,
+              ./images\portfolio\projeckt\Project-mobile\7-Limited-edition-450w.jpg 450w,
+              ./images\portfolio\projeckt\Project-mobile\7-Limited-edition-900w.jpg 900w,
+              ./images\portfolio\projeckt\Project-tablet\7-Limited-354w.jpg 354w,
+              ./images\portfolio\projeckt\Project-tablet\7-Limited-708w.jpg 708w,"
+              sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgLimEdition.jpg"
                 alt="Издание Limited Edition"
                 width="370"
@@ -225,7 +273,14 @@
             </li>
             <li class="list-item project-section__image-shadow ">
               <div class="project-section__portfolio-item">
-              <img
+              <img srcset="
+              ./images\portfolio\projeckt\Destop\Lab-370w.jpg 370w,
+              ./images\portfolio\projeckt\Destop\Lab-740w.jpg 740w,
+              ./images\portfolio\projeckt\Project-mobile\8-Lab-450.jpg 450w,
+              ./images\portfolio\projeckt\Project-mobile\8-Lab-900w.jpg 900w,
+              ./images\portfolio\projeckt\Project-tablet\8-Lab-354w.jpg 354w,
+              ./images\portfolio\projeckt\Project-tablet\8-Lab-708w.jpg 708w" 
+              sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgLab.jpg"
                 alt="Проект LAB"
                 width="370"
@@ -240,6 +295,14 @@
             <li class="list-item project-section__image-shadow ">
               <div class="project-section__portfolio-item">
               <img
+              srcset="
+              ./images\portfolio\projeckt\Destop\Growing-370w.jpg 370w,
+              ./images\portfolio\projeckt\Destop\Growing-740w.jpg 740w,
+              ./images\portfolio\projeckt\Project-mobile\Growing-business-450w.jpg 450w,
+              ./images\portfolio\projeckt\Project-mobile\Growing-business-900w.jpg 900w,
+              ./images\portfolio\projeckt\Project-tablet\9-Growing Busines-354w.jpg 354w,
+              ./images\portfolio\projeckt\Project-tablet\9-Growing Busines-708w.jpg 708w"
+              sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgGrowing.jpg"
                 alt="Growing Business"
                 width="370"
