--- a/portfolio.html
+++ b/portfolio.html
@@ -51,10 +51,10 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__item list-item">
-              <a class="menu__link--current" href="./index.html">Студия</a>
+              <a class="menu__link" href="./index.html">Студия</a>
             </li>
             <li class="menu__item list-item">
-              <a class="menu__link list-item" href="./portfolio.html">Портфолио</a>
+              <a class="menu__link--current" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="menu__item list-item">
               <a class="menu__link">Контакты</a>
