--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
   </header>
   <!--Main-->
-  <main>
+  <!--<main>
     <section class="main-window">
       <div class="container main-window__container">
         <h1 class="main-window__title">
@@ -87,7 +87,7 @@
       </div>
     </section>
     <!--Our props-->
-    <section class="props-section">
+    <!--<section class="props-section">
       <div class="container props-section__container">
         <h2 class="visually-hidden">Особенности</h2>
         <ul class="props-section__list">
@@ -143,7 +143,7 @@
       </div>
     </section>
     <!--images-->
-    <section class="what-we-do">
+    <!--<section class="what-we-do">
       <div class="container">
         <h2 class="what-we-do__title what-we-do__title-hide">
           Чем мы занимаемся
@@ -162,7 +162,7 @@
       </div>
     </section>
     <!--Team-->
-    <section class="team-section">
+    <!--<section class="team-section">
       <div class="container">
         <h2 class="team-section__title">Наша команда</h2>
         <ul class="team-section__list">
@@ -355,7 +355,7 @@
       </div>
     </section>
     <!--Clients-->
-    <section class="clients-section">
+   <!-- <section class="clients-section">
       <div class="container">
         <h2 class="clients-section__title">Постоянные клиенты</h2>
         <ul class="clients-section__list">
@@ -460,7 +460,7 @@
           | Subscribe
           |============================
         -->
-      <div сlass="subscribe">
+      <!--<div сlass="subscribe">
         <form class="subscribe__form">
           <label>
             <strong class="subscribe__header">Подпишитесь на рассылку</strong><br />
@@ -480,7 +480,7 @@
       | Modal window
       |============================
     -->
-  <div class="backdrop is-hidden" data-modal>
+ <!-- <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button type="button" class="modal__btm" data-modal-close>
         <svg width="18" height="18">
