--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
   </header>
   <!--Main-->
-  <!--<main>
+  <main>
     <section class="main-window">
       <div class="container main-window__container">
         <h1 class="main-window__title">
@@ -87,7 +87,7 @@
       </div>
     </section>
     <!--Our props-->
-    <!--<section class="props-section">
+    <section class="props-section">
       <div class="container props-section__container">
         <h2 class="visually-hidden">Особенности</h2>
         <ul class="props-section__list">
@@ -143,7 +143,7 @@
       </div>
     </section>
     <!--images-->
-    <!--<section class="what-we-do">
+    <section class="what-we-do">
       <div class="container">
         <h2 class="what-we-do__title what-we-do__title-hide">
           Чем мы занимаемся
@@ -162,7 +162,7 @@
       </div>
     </section>
     <!--Team-->
-    <!--<section class="team-section">
+    <section class="team-section">
       <div class="container">
         <h2 class="team-section__title">Наша команда</h2>
         <ul class="team-section__list">
@@ -355,7 +355,7 @@
       </div>
     </section>
     <!--Clients-->
-   <!-- <section class="clients-section">
+   <section class="clients-section">
       <div class="container">
         <h2 class="clients-section__title">Постоянные клиенты</h2>
         <ul class="clients-section__list">
@@ -410,18 +410,28 @@
     <div class="container footer__container">
       <div class="footer__side">
         <a class="footer__logo-link" href="/">
-          <span class="footer__logo-style">Web</span><span class="footer__logo-style--white">Studio</span></a>
+          <span class="footer__logo-style">Web</span><span class="footer__logo-style--white">Studio</span></a
+        >
         <address>
           <ul class="footer__list">
             <li class="list-item footer__item">
-              <a class="footer__link link" href="https://goo.gl/maps/Ric9NXAK2YN1q6YY9" target="_blank"
-                rel="noopener noreferrer nofollow">г.Киев, пр-т Леси Украинки, 26</a>
+              <a
+                class="footer__link link"
+                href="https://goo.gl/maps/Ric9NXAK2YN1q6YY9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >г.Киев, пр-т Леси Украинки, 26</a
+              >
             </li>
             <li class="list-item footer__item--mail">
-              <a class="link footer__link--mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="link footer__link--mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
             <li class="list-item footer__item--phone">
-              <a class="link footer__link--phone" href="tel:+380961111111">+380961111111</a>
+              <a class="link footer__link--phone" href="tel:+380961111111"
+                >+380961111111</a
+              >
             </li>
           </ul>
         </address>
@@ -430,57 +440,67 @@
         <h2 class="footer__title">присоединяйтесь</h2>
         <ul class="footer__social-list">
           <li class="list-item">
-            <a class="link footer__social-link" href="" target="_blank" rel="noopener noreferrer"><svg
-                class="footer__social-icon" width="20" height="20">
-                <use href="./images/icons.svg#instagram"></use>
-              </svg></a>
+            <a
+              class="link footer__social-link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              ><svg class="footer__social-icon" width="20" height="20">
+                <use href="./images/icons.svg#instagram"></use></svg></a>
           </li>
           <li class="list-item">
-            <a class="link footer__social-link" href="" target="_blank" rel="noopener noreferrer"><svg
-                class="footer__social-icon" width="20" height="20">
-                <use href="./images/icons.svg#twitter"></use>
-              </svg></a>
+            <a
+              class="link footer__social-link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              ><svg class="footer__social-icon" width="20" height="20">
+                <use href="./images/icons.svg#twitter"></use></svg></a>
           </li>
           <li class="list-item">
-            <a class="link footer__social-link" href="" target="_blank" rel="noopener noreferrer"><svg
-                class="footer__social-icon" width="20" height="20">
-                <use href="./images/icons.svg#facebook"></use>
-              </svg></a>
+            <a
+              class="link footer__social-link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              ><svg class="footer__social-icon" width="20" height="20">
+                <use href="./images/icons.svg#facebook"></use></svg></a>
           </li>
           <li class="list-item">
-            <a class="link footer__social-link" href="" target="_blank" rel="noopener noreferrer"><svg
-                class="footer__social-icon" width="20" height="20">
-                <use href="./images/icons.svg#linkedin"></use>
-              </svg></a>
+            <a
+              class="link footer__social-link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              ><svg class="footer__social-icon" width="20" height="20">
+                <use href="./images/icons.svg#linkedin"></use></svg></a>
           </li>
         </ul>
       </div>
       <!--
-          |============================
-          | Subscribe
-          |============================
-        -->
-      <!--<div сlass="subscribe">
+        |============================
+        | Subscribe
+        |============================
+      -->
+      <div сlass="subscribe">
         <form class="subscribe__form">
           <label>
-            <strong class="subscribe__header">Подпишитесь на рассылку</strong><br />
-            <input class="subscribe__input" type="email" placeholder="E-mail" />
+            <strong class="subscribe__header">Подпишитесь на рассылку</strong><br>
+            <input class="subscribe__input" type="email" placeholder="E-mail">
           </label>
-          <button type="button" class="subscribe__btm">
-            Подписаться<svg class="subscribe___btm-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-send"></use>
-            </svg>
-          </button>
+          <button type="button" class="subscribe__btm">Подписаться<svg class="subscribe___btm-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-send"></use>
+          </svg> </button>
         </form>
       </div>
     </div>
   </footer>
-  <!--
-      |============================
-      | Modal window
-      |============================
-    -->
- <!-- <div class="backdrop is-hidden" data-modal>
+   <!--
+     |============================
+     |Modal 
+     |============================
+   -->
+ <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button type="button" class="modal__btm" data-modal-close>
         <svg width="18" height="18">
