--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!--contact-->
 
       <div class="contact-styles">
-        <a class="contact-styles__link contact-styles__link--mail" href="mailto:info@devstudio.com"><svg
+        <a class="contact-styles__link contact-styles__link" href="mailto:info@devstudio.com"><svg
             class="contact-styles__icon" width="16" height="12">
             <use href="./images/icons.svg#mail"></use>
           </svg>
@@ -218,7 +218,7 @@
             <img
             srcset="./images\studiopage\Team\destop\2-Olga-270w.jpg 270w, 
             ./images\studiopage\Team\destop\2-Olga-540@2x w540.jpg 540w,
-            ./images\studiopage\Team\Team-mobile\2-Olga-450w@2x-2 w450.jpg 2x 450w, 
+            ./images\studiopage\Team\Team-mobile\2-Olga-450w@2x-2.jpg 450w, 
             ./images\studiopage\Team\Team-mobile\2-Olga-950w-2.jpg 900w,
             ./images\studiopage\Team\Team-tablet\2-Olga-350w.jpg 350w,
             ./images\studiopage\Team\Team-tablet\2-Olga-708w.jpg 708w" src="./images/studiopage/5.jpg" alt="Ольга Репина" width="450"   height="460" 
@@ -264,7 +264,7 @@
             <img srcset="./images\studiopage\Team\destop\3-Nik-270w.jpg 270w, 
             ./images\studiopage\Team\destop\3-Nik540w@2x.jpg  540w,
             ./images\studiopage\Team\Team-mobile\3-Nik-450w-3.jpg 450w,
-            ./images\studiopage\Team\Team-mobile\3-Nik-900@2x-3.jpg 2x, 900w,
+            ./images\studiopage\Team\Team-mobile\3-Nik-900@2x-3.jpg 900w,
             ./images\studiopage\Team\Team-tablet\3-Nik-350w-1.jpg 350w,
             ./images\studiopage\Team\Team-tablet\3-Nik-708w2x.jpg 708w,"
             sizes="(min-width: 1200px) 270px,(min-width: 768px) 354px,100vw" 
@@ -315,7 +315,7 @@
             ./images\studiopage\Team\Team-tablet\4-Mihail-708w-2x.jpg 708w "
             sizes="(min-width: 1200px) 270px,(min-width: 768px) 354px,100vw" 
             src="./images/studiopage/7.jpg" alt="Михаил Ермаков" width="450" height="460" />
-            <div class="team-section__wrapper">
+            <div class="team-section__wrapper team-section--last">
               <h3 class="team-section__workername">Михаил Ермаков</h3>
               <p class="team-section__position" lang="en">UI Designer</p>
               <ul class="team-section__social-list">
@@ -408,6 +408,7 @@
   </main>
   <footer class="footer">
     <div class="container footer__container">
+
       <div class="footer__side">
         <a class="footer__logo-link" href="/">
           <span class="footer__logo-style">Web</span><span class="footer__logo-style--white">Studio</span></a
