--- a/index.html
+++ b/index.html
@@ -149,18 +149,26 @@
           Чем мы занимаемся
         </h2>
         <ul class="what-we-do__images">
-          <li class="list-item">
+          <li class="list-item what-we-do__item">
             <img src="images/studiopage/1.jpg" alt="ПК з клавиатурой" width="370" height="294" />
+            <div class="what-we-do__overlay">
+            <p class="what-we-do__overlay-text">Десктопные приложения</p>
+          </div>
           </li>
-          <li class="list-item">
+          <li class="list-item what-we-do__item" >
             <img src="images/studiopage/2.jpg" alt="Пк и телефон" width="370" height="294" />
+            <div class="what-we-do__overlay">
+              <p class="what-we-do__overlay-text">Мобильные приложения</p> </div>
           </li>
-          <li class="list-item">
+          <li class="list-item what-we-do__item">
             <img src="images/studiopage/3.jpg" alt="Планшет" width="370" height="294" />
+            <div class="what-we-do__overlay">
+              <p class="what-we-do__overlay-text">Дизайнерские решения</p> </div>
           </li>
         </ul>
       </div>
     </section>
+
     <!--Team-->
     <section class="team-section">
       <div class="container">
