--- a/portfolio.html
+++ b/portfolio.html
@@ -136,11 +136,11 @@
               sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgTechnocrack.jpg"
                 alt="Технокряк"
-                width="370"
+                max-width="450"
                 height="294"
                />
               </div>
-              <div class="project-section__name-container">
+              <div class="project-section__name-container project-section__name-container--first">
                 <h2 class="project-section__position-name">Технокряк</h2>
                 <p class="project-section__position-type">Веб-сайт</p>
               
@@ -158,12 +158,12 @@
               sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgGoldenStar.jpg"
                 alt="Постер New Orlean vs Golden Star"
-                width="370"
+                max-width="450"
                 height="294"
               />
             </div>
               <div class="project-section__name-container">
-                <h2 class="project-section__position-name">Постер New Orlean vs Golden Star</h2>
+                <h2 class="project-section__position-name">Постер&nbsp;New&nbsp;Orlean&nbsp;vs&nbsp;Golden Star</h2>
                 <p class="project-section__position-type">Дизайн</p>
               </div>
             </li>
@@ -178,7 +178,7 @@
               sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgSeafood.jpg"
                 alt="Ресторан Seafood"
-                width="370"
+                max-width="450"
                 height="294"
               />
             </div>
@@ -199,7 +199,7 @@
               sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgPrime.jpg"
                 alt="Проект Prime"
-                width="370"
+                max-width="450"
                 height="294"
               />
             </div>
@@ -220,7 +220,7 @@
               sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgBoxes.jpg"
                 alt="Проект Boxes"
-                width="370"
+                max-width="450"
                 height="294"
               />
             </div>
@@ -241,7 +241,7 @@
               sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgNoBorders.jpg"
                 alt="Inspiration has no Border"
-                width="370"
+                max-width="450"
                 height="294"
               />
             </div>
@@ -262,7 +262,7 @@
               sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgLimEdition.jpg"
                 alt="Издание Limited Edition"
-                width="370"
+                max-width="450"
                 height="294"
               />
             </div>
@@ -283,7 +283,7 @@
               sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgLab.jpg"
                 alt="Проект LAB"
-                width="370"
+                max-width="450"
                 height="294"
               />
             </div>
@@ -305,7 +305,7 @@
               sizes="(min-width: 1200px) 370px,(min-width: 768px) 354px,100vw" 
                 src="./images/portfolio/imgGrowing.jpg"
                 alt="Growing Business"
-                width="370"
+               max-width="450"
                 height="294"
               />
             </div>
