--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             ./images\studiopage\Team\destop\4-Mihail 540w 2x.jpg 540w,
             ./images\studiopage\Team\Team-mobile\4-Mihail-450w-4.jpg 450w,
             ./images\studiopage\Team\Team-mobile\4-Mihail-900@2x.jpg 900w,
-            ./images\studiopage\Team\Team-tablet\4-Mihail-354w.jpg 354w,
+            ./images\studiopage\Team\Team-tablet\4-Mihail-354w.jpg 350w,
             ./images\studiopage\Team\Team-tablet\4-Mihail-708w-2x.jpg 708w "
             sizes="(min-width: 1200px) 270px,(min-width: 768px) 354px,100vw" 
             src="./images/studiopage/7.jpg" alt="Михаил Ермаков" width="450" height="460" />
@@ -369,35 +369,35 @@
         <ul class="clients-section__list">
           <li class="list-item">
             <a class="clients-section__logo-link" href="" target="_blank" rel="noopener noreferrer"><svg
-                class="clients-section__logo-icon" width="106" height="60">
+                class="clients-section__logo-icon" min-width="106" height="60">
                 <use href="./images/icons.svg#Logo1"></use>
               </svg>
             </a>
           </li>
           <li class="list-item">
             <a class="clients-section__logo-link" href="" target="_blank" rel="noopener noreferrer"><svg
-                class="clients-section__logo-icon" width="106" height="60">
+                class="clients-section__logo-icon" min-width="106" height="60">
                 <use href="./images/icons.svg#Logo2"></use>
               </svg>
             </a>
           </li>
           <li class="list-item">
             <a class="clients-section__logo-link" href="" target="_blank" rel="noopener noreferrer"><svg
-                class="clients-section__logo-icon" width="106" height="60">
+                class="clients-section__logo-icon" min-width="106" height="60">
                 <use href="./images/icons.svg#Logo3"></use>
               </svg>
             </a>
           </li>
           <li class="list-item">
             <a class="clients-section__logo-link" href="" target="_blank" rel="noopener noreferrer"><svg
-                class="clients-section__logo-icon" width="106" height="60">
+                class="clients-section__logo-icon" min-width="106" height="60">
                 <use href="./images/icons.svg#Logo4"></use>
               </svg>
             </a>
           </li>
           <li class="list-item">
             <a class="clients-section__logo-link" href="" target="_blank" rel="noopener noreferrer"><svg
-                class="clients-section__logo-icon" width="106" height="60">
+                class="clients-section__logo-icon" min-width="106" height="60">
                 <use href="./images/icons.svg#Logo5"></use>
               </svg>
             </a>
@@ -405,7 +405,7 @@
 
           <li class="list-item">
             <a class="clients-section__logo-link" href="" target="_blank" rel="noopener noreferrer"><svg
-                class="clients-section__logo-icon" width="106" height="60">
+                class="clients-section__logo-icon" min-width="106" height="60">
                 <use href="./images/icons.svg#Logo6"></use>
               </svg>
             </a>
@@ -580,7 +580,7 @@
         <a class=>Контакты</a>
       </li>
     </ul>
-    <ul>
+    <ul class="js-menu__list-phone">
       <li class="list-item"><a class="mobile-menu__contact--phone" href="tel:+380961111111">
       +380961111111</a></li>
    <li class=" list-item mobile-menu__contact--mail--test"><a class="mobile-menu__contact--mail" href="mailto:info@devstudio.com">
@@ -588,16 +588,16 @@
     </ul>
     <ul class="mobile-menu__social-list">
       <li class=" list-item list-item mobile-menu__social-item">
-        <a class="mobile-menu__social-item" href="" target="_blank" rel="noopener noreferrer">Instagram</a>
-      </li>
-      <li class="list-item mobile-menu__social-item  ">
-        <a class="mobile-menu__social-item" href="" target="_blank" rel="noopener noreferrer">Twitter</a>
+        <a class="mobile-menu__social-link" href="" target="_blank" rel="noopener noreferrer">Instagram</a>
       </li>
       <li class="list-item mobile-menu__social-item">
-        <a class="mobile-menu__social-item" href="" target="_blank" rel="noopener noreferrer">Facebook</a>
+        <a class="mobile-menu__social-link" href="" target="_blank" rel="noopener noreferrer">Twitter</a>
+      </li>
+      <li class="list-item mobile-menu__social-item">
+        <a class="mobile-menu__social-link" href="" target="_blank" rel="noopener noreferrer">Facebook</a>
       </li>
       <li class="list-item mobile-menu__social-item" >
-        <a class="mobile-menu__social-item" href="" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <a class="mobile-menu__social-link" href="" target="_blank" rel="noopener noreferrer">LinkedIn</a>
       </li>
     </ul>
   </div>
