--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               </svg>
             </div>
             <h3 class="props-section__title">Современные технологии</h3>
-            <p class="props-section__text">
+            <p class="props-section__text props-section__text--last">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
