--- a/portfolio.html
+++ b/portfolio.html
@@ -407,7 +407,7 @@
         </div>
       </div>
     </footer>
-     <!--Mobile-menu-->
+   <!--Mobile-menu-->
   <div class="js-menu-container" id="mobile-menu">
     <button type="button" class="js-close-menu">
       <svg height="19" width="19">
@@ -415,17 +415,17 @@
       </svg>
     </button>
     <ul class="list js-menu__list">
-      <li class=" list-item js-menu__item">
-        <a class=" js-menu__item list-item " href="./index.html">Студия</a>
+      <li class="list-item js-menu__item">
+        <a class="menu__link--current" href="./index.html">Студия</a>
       </li>
       <li class="list-item js-menu__item">
-        <a class="menu__link--current" href="./portfolio.html">Портфолио</a>
+        <a class="js-menu__item list-item" href="./portfolio.html">Портфолио</a>
       </li>
       <li class="list-item js-menu__item js-menu__item__item--last">
         <a class=>Контакты</a>
       </li>
     </ul>
-    <ul>
+    <ul class="js-menu__list-phone">
       <li class="list-item"><a class="mobile-menu__contact--phone" href="tel:+380961111111">
       +380961111111</a></li>
    <li class=" list-item mobile-menu__contact--mail--test"><a class="mobile-menu__contact--mail" href="mailto:info@devstudio.com">
@@ -433,16 +433,16 @@
     </ul>
     <ul class="mobile-menu__social-list">
       <li class=" list-item list-item mobile-menu__social-item">
-        <a class="mobile-menu__social-item" href="" target="_blank" rel="noopener noreferrer">Instagram</a>
-      </li>
-      <li class="list-item mobile-menu__social-item  ">
-        <a class="mobile-menu__social-item" href="" target="_blank" rel="noopener noreferrer">Twitter</a>
+        <a class="mobile-menu__social-link" href="" target="_blank" rel="noopener noreferrer">Instagram</a>
       </li>
       <li class="list-item mobile-menu__social-item">
-        <a class="mobile-menu__social-item" href="" target="_blank" rel="noopener noreferrer">Facebook</a>
+        <a class="mobile-menu__social-link" href="" target="_blank" rel="noopener noreferrer">Twitter</a>
+      </li>
+      <li class="list-item mobile-menu__social-item">
+        <a class="mobile-menu__social-link" href="" target="_blank" rel="noopener noreferrer">Facebook</a>
       </li>
       <li class="list-item mobile-menu__social-item" >
-        <a class="mobile-menu__social-item" href="" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <a class="mobile-menu__social-link" href="" target="_blank" rel="noopener noreferrer">LinkedIn</a>
       </li>
     </ul>
   </div>
