--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!--contact-->
 
       <div class="contact-styles">
-        <a class="contact-styles__link contact-styles__link" href="mailto:info@devstudio.com"><svg
+        <a class="contact-styles__link contact-styles__link--mail" href="mailto:info@devstudio.com"><svg
             class="contact-styles__icon" width="16" height="12">
             <use href="./images/icons.svg#mail"></use>
           </svg>
